# nuextract-pipeline

./: .gitignore  CLAUDE.md  README.md  chunking.py  nuextract.py  pyproject.toml  streamlit_app.py  utils.py
.claude/: settings.json
.claude/hooks/: README.md  block-secrets.sh  py-checks.sh  run-tests.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-15-batch-vision-support.md
docs/superpowers/specs/: 2026-03-13-three-features-design.md  2026-03-15-batch-vision-support-design.md
scripts/: probe_mlx_vlm.py
tests/: conftest.py  test_chunking.py  test_e2e.py  test_nuextract.py  test_streamlit_app.py  test_streamlit_app_apptest.py  test_utils.py  test_validation.py
