[project]
name = "nuextract-pipeline"
version = "1.0.0"
description = "Local document understanding via NuExtract3-MLX on Apple Silicon: structured extraction, document-to-markdown, and template generation in a Streamlit UI"
requires-python = ">=3.12"
dependencies = [
    "mlx-vlm==0.4.4",
    "streamlit==1.54.0",
    "torchvision==0.27.0",
    "transformers==5.9.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.16",
]
