[project]
name = "nuextract-studio"
version = "1.0.0"
description = "Extract structured information from documents, convert images to Markdown, and generate templates with the NuMind NuExtract3 model on Apple Silicon with MLX."
requires-python = ">=3.12"
dependencies = [
    "mlx-vlm==0.4.4",
    "streamlit==1.54.0",
    "torchvision==0.27.0",
    "transformers==5.9.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
